# flashmark

./: Cargo.toml  README.md  install.ps1
.github/workflows/: build.yml
src/: cleanup.rs  drive.rs  main.rs  pattern.rs  report.rs  speed.rs  ui.rs  update.rs  usb.rs  verify.rs
