[package]
name = "flashmark"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
console = "0.16.4"
ctrlc = "3.5.2"
indicatif = "0.18.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ureq = "3.3.0"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl", "Win32_Devices_DeviceAndDriverInstallation", "Win32_Devices_Usb", "Win32_Devices_Properties"] }
